the turd came from the ass

--- a/stylesheets/colors.less
+++ b/stylesheets/colors.less
@@ -1,4 +1,5 @@
-// These colors are specific to the theme. Do not use in a package!
+@terminal-background-color: black;
+@terminal-foreground-color: #57FF57;
 
 @very-light-gray: #c5c8c6;
 @light-gray: #969896;
