--- a/stylesheets/syntax-variables.less
+++ b/stylesheets/syntax-variables.less
@@ -4,25 +4,25 @@
 // include a syntax-variables.less file.
 
 // General colors
-@syntax-text-color: @very-light-gray;
-@syntax-cursor-color: white;
-@syntax-selection-color: lighten(@dark-gray, 10%);
-@syntax-background-color: @very-dark-gray;
+@syntax-text-color: @terminal-foreground-color;
+@syntax-cursor-color: @terminal-foreground-color;
+@syntax-selection-color: @terminal-foreground-color;
+@syntax-background-color: @terminal-background-color;
 
 // Guide colors
 @syntax-wrap-guide-color: @dark-gray;
-@syntax-indent-guide-color: @gray;
-@syntax-invisible-character-color: @gray;
+@syntax-indent-guide-color: darken(@terminal-foreground-color, 40%);
+@syntax-invisible-character-color: darken(@terminal-foreground-color, 40%);
 
 // For find and replace markers
 @syntax-result-marker-color: @light-gray;
 @syntax-result-marker-color-selected: white;
 
 // Gutter colors
-@syntax-gutter-text-color: @very-light-gray;
-@syntax-gutter-text-color-selected: @syntax-gutter-text-color;
-@syntax-gutter-background-color: @dark-gray;
-@syntax-gutter-background-color-selected: @gray;
+@syntax-gutter-text-color: @terminal-foreground-color;
+@syntax-gutter-text-color-selected: @terminal-background-color;
+@syntax-gutter-background-color: @terminal-background-color;
+@syntax-gutter-background-color-selected: @terminal-foreground-color;
 
 // For git diff info. i.e. in the gutter
 @syntax-color-renamed: @blue;
