".editor" is deprecated

--- a/index.less
+++ b/index.less
@@ -1,7 +1,7 @@
 @terminal-background-color: black;
 @terminal-foreground-color: #57FF57;
 
-.editor {
+:host, atom-text-editor {
   background-color: @terminal-background-color;
   color: @terminal-foreground-color;
 
